parser/snapshots/parser__ast_tree_test__tests__test_func_call.snap
---
source: parser/ast_tree_test.rs
expression: "add(1, 2)"
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "FunctionCall",
        "callee": {
          "type": "IDENTIFIER",
          "name": "add",
          "span": {
            "start": 0,
            "end": 3
          }
        },
        "arguments": [
          {
            "type": "Integer",
            "raw": 1,
            "span": {
              "start": 4,
              "end": 5
            }
          },
          {
            "type": "Integer",
            "raw": 2,
            "span": {
              "start": 7,
              "end": 8
            }
          }
        ],
        "span": {
          "start": 0,
          "end": 9
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 9
    }
  }
}
