parser/snapshots/parser__ast_tree_test__tests__test_hash.snap
---
source: parser/ast_tree_test.rs
expression: "{\"a\": 1}"
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "Hash",
        "elements": [
          [
            {
              "type": "String",
              "raw": "a",
              "span": {
                "start": 1,
                "end": 4
              }
            },
            {
              "type": "Integer",
              "raw": 1,
              "span": {
                "start": 6,
                "end": 7
              }
            }
          ]
        ],
        "span": {
          "start": 0,
          "end": 8
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 8
    }
  }
}
