parser/snapshots/parser__ast_tree_test__tests__test_let.snap
---
source: parser/ast_tree_test.rs
expression: let a = 3
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "Let",
        "identifier": {
          "type": "IDENTIFIER",
          "name": "a",
          "span": {
            "start": 4,
            "end": 5
          }
        },
        "type_annotation": null,
        "expr": {
          "type": "Integer",
          "raw": 3,
          "span": {
            "start": 8,
            "end": 9
          }
        },
        "span": {
          "start": 0,
          "end": 9
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 9
    }
  }
}
