parser/snapshots/parser__ast_tree_test__tests__test_let_with_type.snap
---
source: parser/ast_tree_test.rs
expression: "let a: int? = 3"
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "Let",
        "identifier": {
          "type": "IDENTIFIER",
          "name": "a",
          "span": {
            "start": 4,
            "end": 5
          }
        },
        "type_annotation": {
          "type": "OptionalType",
          "inner": {
            "type": "NamedType",
            "name": "int",
            "span": {
              "start": 7,
              "end": 10
            }
          },
          "span": {
            "start": 7,
            "end": 11
          }
        },
        "expr": {
          "type": "Integer",
          "raw": 3,
          "span": {
            "start": 14,
            "end": 15
          }
        },
        "span": {
          "start": 0,
          "end": 15
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 15
    }
  }
}
