parser/snapshots/parser__ast_tree_test__tests__test_return.snap
---
source: parser/ast_tree_test.rs
expression: return 3
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "ReturnStatement",
        "argument": {
          "type": "Integer",
          "raw": 3,
          "span": {
            "start": 7,
            "end": 8
          }
        },
        "span": {
          "start": 0,
          "end": 8
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 8
    }
  }
}
